--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:description"
         content="Desarrollador .NET con experiencia en C#, SQL Server y aplicaciones desktop/web.">
 
-    <title>Franco Wagenhöfer | Portafolio</title>
+    <title>Portafolio | Franco Wagenhöfer</title>
     <script>
         (function () {
             const savedTheme = localStorage.getItem("theme") || "dark";
@@ -71,70 +71,42 @@
         <section id="proyectos" class="section">
             <h2>Proyectos destacados</h2>
             <div id="projects-container" class="projects-grid"></div>
+
             <template id="project-template">
-                <article class="project-card hidden">
-                    <h3 class="card-title"></h3>
-                    <p class="card-desc"></p>
-                    <div class="tech-icons card-icons">
-                        <img loading="lazy" />
-                        <img loading="lazy" />
-                        <img loading="lazy" />
-                        <img loading="lazy" />
-                    </div>
-                    <div class="project-links">
-                        <a class="card-download btn-glow card-btn-download" download></a>
-                        <button type="button" class="open-modal btn-glow card-open" data-id="">Ver más</button>
+                <article class="project-card">
+                    <a class="card-image-wrapper">
+                        <img class="card-image" src="" alt="" />
+                    </a>
+                    <div class="card-content">
+                        <div class="card-badges">
+                            <!-- Badge destacado (fijo) -->
+                            <span class="card-badge">
+                                <svg viewBox="0 0 24 24" fill="currentColor" width="12" height="12">
+                                    <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z" />
+                                </svg>
+                                Destacado
+                            </span>
+                            <!-- Badge tipo (dinámico) -->
+                            <span class="card-badge card-badge-tipo">
+                                <span class="badge-text"></span>
+                            </span>
+                        </div>
+                        <h3 class="card-title"></h3>
+                        <p class="card-description"></p>
+                        <div class="card-tech">
+                            <img loading="lazy" />
+                            <img loading="lazy" />
+                            <img loading="lazy" />
+                            <img loading="lazy" />
+                        </div>
+                        <div class="card-actions">
+                            <a class="btn card-btn btn-primary card-download" download></a>
+                            <button type="button" class="btn card-btn btn-secondary open-modal" data-id="">Ver más</button>
+                        </div>
                     </div>
                 </article>
             </template>
-            <!-- Modal -->
-            <!-- <div id="project-modal" class="project-modal hidden" role="dialog" aria-modal="true">
-                <button class="modal-close-top" aria-label="Cerrar">&times;</button>
-                <button class="modal-nav prev-project" aria-label="Proyecto anterior">‹</button>
-                <button class="modal-nav next-project" aria-label="Proyecto siguiente">›</button>
 
-                <div class="modal-content">
-                    <button class="close-modal close-inside" aria-label="Cerrar">&times;</button>
-                    <h3 class="modal-title"></h3>
-                    <div class="modal-body modal-grid">
-                        <div class="modal-block gallery-block">
-                            <h4>Imagenes</h4>
-                            <div class="modal-gallery">
-                                <div class="modal-gallery-slider"></div>
-                                <div class="gallery-controls">
-                                    <button class="gallery-prev" type="button" aria-label="Imagen anterior">
-                                        <svg height="22px" viewBox="0 -960 960 960" width="22px" fill="currentColor">
-                                            <path d="M440-240 200-480l240-240 56 56-183 184 183 184-56 56Zm264 0L464-480l240-240 56 56-183 184 183 184-56 56Z" />
-                                        </svg>
-                                    </button>
-                                    <div class="gallery-dots"></div>
-                                    <button class="gallery-next" type="button" aria-label="Imagen siguiente">
-                                        <svg height="22px" viewBox="0 -960 960 960" width="22px" fill="currentColor">
-                                            <path d="M383-480 200-664l56-56 240 240-240 240-56-56 183-184Zm264 0L464-664l56-56 240 240-240 240-56-56 183-184Z" />
-                                        </svg>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="modal-block description-block">
-                            <h4>Descripción</h4>
-                            <p class="modal-text"></p>
-                            <p class="modal-text2"></p>
-                        </div>
-                        <div class="modal-block tech-block">
-                            <h4>Tecnologías</h4>
-                            <ul class="tech-list"></ul>
-                        </div>
-                        <div class="modal-block methods-block">
-                            <h4>Métodos</h4>
-                            <ul class="methods-list"></ul>
-                        </div>
-                    </div>
-                    <div class="project-links modal-links">
-                        <a class="modal-download btn-glow" target="_blank"></a>
-                    </div>
-                </div>
-            </div> -->
         </section>
 
         <!-- Habilidades -->
@@ -438,7 +410,7 @@
                 </div>
             </div>
             <div class="project-links modal-links">
-                <a class="modal-download btn-glow" target="_blank"></a>
+                <a class="modal-download btn btn-glow" target="_blank"></a>
             </div>
         </div>
     </div>
@@ -449,6 +421,8 @@
         <span id="close-overlay">&times;</span>
         <img id="overlay-image" src="" alt="Imagen ampliada" loading="lazy" />
     </div>
+
+
 
 </body>
 
