nuevas y más mejoras en tarjetas de proyectos.

--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
                             <span class="card-badge card-badge-tipo">
                                 <span class="badge-text"></span>
                             </span>
+                            <!-- Badge framework (dinámico) -->
+                            <span class="card-badge card-badge-framework">
+                                <span class="badge-text"></span>
+                            </span>
                         </div>
                         <h3 class="card-title"></h3>
                         <p class="card-description"></p>
