mejoras header y navbar

--- a/index.html
+++ b/index.html
@@ -57,14 +57,19 @@
         <h1 class="blend-title">Franco Wagenhöfer</h1>
         <p class="subtitle">Desarrollador .NET | Aplicaciones web, desktop y manejo de datos</p>
         <div class="hero-buttons">
-
-            <a href="/CV/cv-franco-wagenhofer.pdf" download class="btn btn-primary btn-glow">Descargar CV</a>
+            <a href="/CV/cv-franco-wagenhofer.pdf" download class="btn btn-primary btn-glow" >Descargar CV</a>
             <a href="https://linkedin.com/in/franco-wagenhöfer" target="_blank" rel="noopener noreferrer"
                 class="btn btn-secondary btn-glow">LinkedIn</a>
             <a href="https://github.com/francowagenhofer" target="_blank" rel="noopener noreferrer"
                 class="btn btn-secondary btn-glow">GitHub</a>
         </div>
     </header>
+
+    <div class="scroll-indicator">
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <polyline points="6 9 12 15 18 9"></polyline>
+        </svg>
+    </div>
 
     <main class="container">
 
